--- a/web/template/Egresado/dashboardEgresado.html
+++ b/web/template/Egresado/dashboardEgresado.html
@@ -93,9 +93,9 @@
         </div>
       </nav>
 
-      <section class="container-fluid" style="padding-top: 70px;">
+      <section class="container-fluid" style="padding-top: 70px; ">
       	<div class="row">
-      		<div id="actividades" class="col-lg-10 col-md-10">
+      		<div id="actividades" class="col-lg-10 col-md-9">
 				<div class="card-columns">
 				  <div class="card">
 				    <img class="card-img-top img-fluid" src={% static "img/1.png" %} alt="Card image cap">
@@ -185,79 +185,79 @@
 			</div>
 
 			<!--PANEL DE AMIGOS-->
-			<div class="col-lg-2 col-md-2">
+			<div class="col-lg-2 col-md-3 hidden-sm-down">
 				<center><b><label>Amigos</label></b></center><hr>
 				<div id="amigos">
 
 					<div class="container-fluid ">
 						<div class="row ">
-							<div class="col-lg-3 align-self-center ">
+							<div class="col-lg-3 col-md-3 align-self-center ">
 								<img class="circular" src={% static "varios/perfil.jpg" %}>
 							</div>
-							<div class="col-lg-6 align-self-center ">
+							<div class="col-lg-6 col-md-6 align-self-center ">
 								<h6>Camila</h6> 
 							</div>
-							<div class="col-lg-3 align-self-center ">
+							<div class="col-lg-3 col-md-3 align-self-center ">
 								<a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
 							</div>
 						</div><hr>
 
 						<div class="row ">
-							<div class="col-lg-3 align-self-center ">
+							<div class="col-lg-3 col-md-3 align-self-center ">
 								<img class="circular" src={% static "varios/perfil.jpg" %}>
 							</div>
-							<div class="col-lg-6 align-self-center ">
+							<div class="col-lg-6 col-md-6 align-self-center ">
 								<h6>Camila</h6> 
 							</div>
-							<div class="col-lg-3 align-self-center ">
+							<div class="col-lg-3 col-md-3 align-self-center ">
 								<a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
 							</div>
 						</div><hr>
 
 						<div class="row ">
-							<div class="col-lg-3 align-self-center ">
+							<div class="col-lg-3 col-md-3 align-self-center ">
 								<img class="circular" src={% static "varios/perfil.jpg" %}>
 							</div>
-							<div class="col-lg-6 align-self-center ">
+							<div class="col-lg-6 col-md-6 align-self-center ">
 								<h6>Camila</h6> 
 							</div>
-							<div class="col-lg-3 align-self-center ">
+							<div class="col-lg-3 col-md-3 align-self-center ">
 								<a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
 							</div>
 						</div><hr>
 
 						<div class="row ">
-							<div class="col-lg-3 align-self-center ">
+							<div class="col-lg-3 col-md-3 align-self-center ">
 								<img class="circular" src={% static "varios/perfil.jpg" %}>
 							</div>
-							<div class="col-lg-6 align-self-center ">
+							<div class="col-lg-6 col-md-6 align-self-center ">
 								<h6>Camila</h6> 
 							</div>
-							<div class="col-lg-3 align-self-center ">
+							<div class="col-lg-3 col-md-3 align-self-center ">
 								<a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
 							</div>
 						</div><hr>
 
 						<div class="row ">
-							<div class="col-lg-3 align-self-center ">
+							<div class="col-lg-3 col-md-3 align-self-center ">
 								<img class="circular" src={% static "varios/perfil.jpg" %}>
 							</div>
-							<div class="col-lg-6 align-self-center ">
+							<div class="col-lg-6 col-md-6 align-self-center ">
 								<h6>Camila</h6> 
 							</div>
-							<div class="col-lg-3 align-self-center ">
+							<div class="col-lg-3 col-md-3 align-self-center ">
 								<a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
 							</div>
 						</div><hr>								
 
 						<div class="row ">
-							<div class="col-lg-3 align-self-center ">
+							<div class="col-lg-3 col-md-3 align-self-center ">
 								<img class="circular" src={% static "varios/perfil.jpg" %}>
 							</div>
-							<div class="col-lg-6 align-self-center ">
+							<div class="col-lg-6 col-md-6 align-self-center ">
 								<h6>Camila</h6> 
 							</div>
-							<div class="col-lg-3 align-self-center ">
+							<div class="col-lg-3 col-md-3 align-self-center ">
 								<a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
 							</div>
 						</div>
