--- a/web/template/Egresado/formularioEgresado.html
+++ b/web/template/Egresado/formularioEgresado.html
@@ -6,6 +6,11 @@
   <title>Pre Registro Egresado</title> 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <script src="http://code.gijgo.com/1.6.1/js/gijgo.js" type="text/javascript"></script>
+    <link href="http://code.gijgo.com/1.6.1/css/gijgo.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
   
 </head>
     <style type="text/css">
@@ -90,7 +95,7 @@
              <div class="form-group row">
               <label for="example-date-input" class="col-4 col-form-label">Fecha de Graduación</label>
               <div class="col-12">
-                <input class="form-control" required = "True" name = "graduation_year" type="date" value="1990-01-01" id="example-date-input">
+                <input class="form-control" id="datepicker" width="276" name="graduation_year" type="date" />
               </div>
             </div>
             <label >Genero</label><br>
