--- a/web/template/Admin/editarInfoAdm.html
+++ b/web/template/Admin/editarInfoAdm.html
@@ -8,8 +8,11 @@
           <form method="POST" enctype="multipart/form-data" >{% csrf_token %}
             <div class="row"> 
               <div class="col-sm-5 col-md-5 col-lg-3">
-                <img class="circular" src="{{usuario.profile_picture.url}}">
-
+              {% if not usuario.profile_picture  %}
+                    <img class="circular" src="">
+              {% else %}
+                    <img class="circular" src="{{usuario.profile_picture.url}}">
+              {% endif %} 
                   <div class="form-group">
                     <label for="exampleInputFile">Subir</label>
                     <input type="file" class="form-control-file" id="exampleInputFile" name="profile_picture" aria-describedby="fileHelp">
