--- a/web/template/Egresado/formularioEgresado.html
+++ b/web/template/Egresado/formularioEgresado.html
@@ -1,58 +1,7 @@
+{% extends "Bases/BaseFormGraduated.html" %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Pre Registro Egresado</title> 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <script src="http://code.gijgo.com/1.6.1/js/gijgo.js" type="text/javascript"></script>
-    <link href="http://code.gijgo.com/1.6.1/css/gijgo.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-  
-</head>
-    <style type="text/css">
-      .caja{
-        padding-bottom: 50px; 
-        padding-top: 50px; 
-      }
-      .borde
-      {
-        border: 0.5px solid grey; 
-        padding: 20px; 
-        border-radius: 20px;
-        background-color: white; 
-      }
-      .box{
-      background: url({% static "/img/pereira_aire.jpg" %});
-      background-size: cover;
-      background-position: center;
-      box-shadow: inset 0px 0px 100px black;
-      }
 
-      .emsg{
-          color: red;
-      }
-      .hidden {
-           visibility:hidden;
-      }
-      .colorbtn{
-        background-color:#3a906d;
-        border-color: #3a906d;
-      }
-      ul {list-style:none}
-
-    </style>
-  <body>
-
-  <header>
-      <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
-        <div><a class="navbar-brand" href="/">SISTEMA DE EGRESADOS UTP</a></div>
-      </nav>
-  </header>
-
+{% block contenido_form %}
 
 <section class="container-fluid box" >      
       <div class="row justify-content-center caja">
@@ -95,7 +44,7 @@
              <div class="form-group row">
               <label for="example-date-input" class="col-4 col-form-label">Fecha de Graduación</label>
               <div class="col-12">
-                <input class="form-control" id="datepicker" width="276" name="graduation_year" type="date" />
+                <input class="form-control" id="datepicker" width="276" name="graduation_year" value="1990-01-01" type="date" />
               </div>
             </div>
             <label >Genero</label><br>
@@ -125,7 +74,6 @@
         </form>
       {% if mensaje.0 %}
           <input id="txt_name" style="display: none" value="{{mensaje.0}}">
-
           <div class="modal fade" id="server_msg_modal">
             <div class="modal-dialog">
               <div class="modal-content">
@@ -147,15 +95,7 @@
 
       </div>
     </section>
+  
+{% endblock contenido_form %}
 
 
-    <!-- jQuery first, then Tether, then Bootstrap JS. -->
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-
-    <script type="text/javascript" src= {% static "js/regularExpresions.js" %}></script>
-    <script type="text/javascript" src={% static "js/form_egr.js" %}></script>
- 
- </body>
-</html>
