--- a/web/template/Bases/BaseRoot.html
+++ b/web/template/Bases/BaseRoot.html
@@ -49,7 +49,7 @@
         <a class="nav-link" href="/aceptar_cuentas_admin?username={{usuario.username}}">Cuentas <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href="/crear_categorias">Crear Categoria<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/crear_categorias?username={{usuario.username}}">Crear Categoria<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="/dashboard_root?username={{usuario.username}}">Perfil</a>
