--- a/web/template/Root/DashBoardRoot.html
+++ b/web/template/Root/DashBoardRoot.html
@@ -28,7 +28,7 @@
         </div>
         <div class="col-md-3">  
           <ul style="">
-            <li><a href="">Crear categorías</a></li>
+            <li><a href="/crear_categorias?username={{usuario.username}}">Crear categorías</a></li>
             <li><a href="/aceptar_cuentas_admin?username={{usuario.username}}">Gestión de cuentas</a></li>
             <li><a href="">Editar información</a></li>
             <li><a href="/logout">Cerrar sesión</a></li>
