--- a/web/template/Egresado/registroExitoso.html
+++ b/web/template/Egresado/registroExitoso.html
@@ -1,13 +1,22 @@
 {% extends "Bases/BaseFormGraduated.html" %}
 {% load staticfiles %}
 
-{% block contenido_form %}}
+{% block contenido_form %}
 
-<section class="container-fluid box" >      
-      <div class="aja">
-      		<h1 style="color:white;">Registro Exitoso</h1><br>
-      		<button type="button" class="btn btn-success colorbtn"  onclick="location.href='/';">Inicio</button>
-	  </div>    
-</section>
-	
+ <section class="container-fluid">
+    <div class="row justify-content-center box">
+      <div class="col-sm-8 col-md-6 col-lg-5 align-self-center contenido">
+        <div class="row justify-content-center" style="height: 55vh;">
+          <div class="col-sm-12 col-md-12 col-lg-10 align-self-center">
+            <center>
+              <center>
+              <h3 style="color:white;">Registro Exitoso</h3>
+              <button type="button" style="background-color: #3a906d; border-width:0px;" class="btn btn-primary" onclick="location.href='/';">Inicio</button> 
+              </center>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 {% endblock contenido_form %}
