funcionalidad crear categoria

--- a/web/template/Admin/editarInfoAdm.html
+++ b/web/template/Admin/editarInfoAdm.html
@@ -49,7 +49,7 @@
                   </div>
                 </div><br>
                 <center>
-                  <button type="submit" data-trigger="focus" class="btn btn-primary" onclick="location.href='/dashboard_admin/?dni={{usuario.dni}}';">Volver</button>
+                  <button type="button" data-trigger="focus" class="btn btn-primary" onclick="location.href='/dashboard_admin/?dni={{usuario.dni}}';">Volver</button>
                   <button type="submit" data-trigger="focus" class="btn btn-primary" >Guardar</button>
                 </center>
               </div>
