--- a/web/template/Root/DashBoardRoot.html
+++ b/web/template/Root/DashBoardRoot.html
@@ -7,7 +7,7 @@
     <div class="col-md-12 ">
       <div class="row"> 
         <div class="col-sm-5 col-md-5 col-lg-3 ">
-          <img class="circular" src={% static "varios/perfil.jpg" %}>
+          <img class="circular" src={% static "varios/logo2.png" %}>
         </div>
         <div class="col-sm-7 col-md-7 col-lg-9 ">
 
