--- a/web/template/Bases/BaseAdmin.html
+++ b/web/template/Bases/BaseAdmin.html
@@ -49,7 +49,7 @@
               <a class="nav-link" href="/aceptar_cuentas?dni={{usuario.dni}}">Cuentas <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="#">Actividades <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/create_activity?dni={{usuario.dni}}">Actividades <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="/dashboard_admin?dni={{usuario.dni}}">Perfil</a>
