mostrando actividades de interes

--- a/web/template/Egresado/dashboardEgresado.html
+++ b/web/template/Egresado/dashboardEgresado.html
@@ -11,6 +11,8 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
+    <title>Dashboard egresado {{usuario.first_name}}</title>
+
   </head>
 
 
@@ -94,96 +96,19 @@
       </nav>
 
       <section class="container-fluid" style="padding-top: 70px; ">
+
       	<div class="row">
       		<div id="actividades" class="col-lg-10 col-md-9">
 				<div class="card-columns">
-				  <div class="card">
-				    <img class="card-img-top img-fluid" src={% static "img/1.png" %} alt="Card image cap">
+				{% for actividad in actividades %}
+				<div class="card">
+				    <img class="card-img-top img-fluid" src="{{actividad.image_activity.url}}" alt="Card image cap">
 				    <div class="card-block">
-				      <h4 class="card-title">Card title that wraps to a new line</h4>
-				      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+				      <h4 class="card-title">{{actividad.name}}</h4>
+				      <p class="card-text">{{actividad.description}}</p>
 				    </div>
 				  </div>
-				<div class="card card-inverse card-info mb-3 text-center">
-				  <div class="card-block">
-				    <blockquote class="card-blockquote">
-				      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-				      <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
-				    </blockquote>
-				  </div>
-				</div>
-				  <div class="card">
-				    <img class="card-img-top img-fluid" src={% static "img/caminito_utp.jpg" %} alt="Card image cap">
-				    <div class="card-block">
-				      <h4 class="card-title">Card title</h4>
-				      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-				      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-				    </div>
-				  </div>
-				  <div class="card card-inverse card-primary p-3 text-center">
-				    <blockquote class="card-blockquote">
-				      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
-				      <footer>
-				        <small>
-				          Someone famous in <cite title="Source Title">Source Title</cite>
-				        </small>
-				      </footer>
-				    </blockquote>
-				  </div>
-				  <div class="card text-center">
-				    <div class="card-block">
-				      <h4 class="card-title">Card title</h4>
-				      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-				      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-				    </div>
-				  </div>
-				  <div class="card">
-				    <h6>Hola mundo</h6>
-				  </div>
-				  <div class="card p-3 text-right">
-				    <blockquote class="card-blockquote">
-				      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-				      <footer>
-				        <small class="text-muted">
-				          Someone famous in <cite title="Source Title">Source Title</cite>
-				        </small>
-				      </footer>
-				    </blockquote>
-				  </div>
-				 <div class="card card-inverse card-danger text-center">
-					  <div class="card-block">
-					    <blockquote class="card-blockquote">
-					      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-					      <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
-					    </blockquote>
-					  </div>
-					</div>
-			  	<div class="card">
-				    <div class="card-block">
-				      <h4 class="card-title">Card title</h4>
-				      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-				      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-				    </div>
-				  </div>
-
-					<div class="card card-inverse card-success mb-3 text-center">
-					  <div class="card-block">
-					    <blockquote class="card-blockquote">
-					      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-					      <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
-					    </blockquote>
-					  </div>
-					</div>
-				  				  <div class="card">
-				    <div class="card-block">
-				      <h4 class="card-title">Card title</h4>
-				      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-				      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-				    </div>
-				  </div>
-				</div>
-			</div>
-
+				{% endfor %}
 			<!--PANEL DE AMIGOS-->
 			<div class="col-lg-2 col-md-3 hidden-sm-down">
 				<center><b><label>Amigos</label></b></center><hr>
