--- a/web/template/Egresado/dashboardEgresado.html
+++ b/web/template/Egresado/dashboardEgresado.html
@@ -83,7 +83,7 @@
               <a class="nav-link " href="#">Inicio<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link " href="#">Amigos<span class="sr-only">(current)</span></a>
+              <a class="nav-link " href="circulo_amigos?username={{usuario.dni}}">Amigos<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item ">
               <a class="nav-link " href="#">Perfil<span class="sr-only">(current)</span></a>
